--- a/Givehub/Givehub.csproj
+++ b/Givehub/Givehub.csproj
@@ -6,4 +6,11 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+    <Folder Include="Model\" />
+    <Folder Include="View\" />
+    <Folder Include="wwwroot\images\" />
+  </ItemGroup>
+
 </Project>
